--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,3 +1,8 @@
 {
-    "scientists": "Scientists"
+    "scientists": "Scientists",
+    "scientistsScreenScaffoldMessage": "Let's pretend this app contains infomation related to scientists and their inventions",
+    "scientistName": "Name",
+    "scientistInvention": "Invention",
+    "scientistCountry": "Country",
+    "scientistYear": "Year"
 }
